Bug Fixes for: Browser Provider, Accessibility and Downloads
Specifically:
- Added alias name for provider
- Fixed max values for font in the settings' accessiblity menu
- Fixed reflection code wrt downloading a file

Change-Id: I80ffc9f188052588c3e884996d49ee4fa301ac7f